[gd_scene load_steps=3 format=3 uid="uid://crd3dvr6fvvk0"]

[ext_resource type="Script" path="res://scenes/questions/trivia_question.gd" id="1_cy1d4"]
[ext_resource type="PackedScene" uid="uid://cvv6iv6ohm2qk" path="res://scenes/questions/header_container.tscn" id="2_py6v3"]

[node name="TriviaQuestion" type="CanvasLayer"]
script = ExtResource("1_cy1d4")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.310617, 0.310617, 0.310617, 1)

[node name="HeaderContainer" parent="." instance=ExtResource("2_py6v3")]
unique_name_in_owner = true

[node name="BackButton" type="Button" parent="."]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = 8.0
grow_vertical = 0
text = "Back"

[node name="QuestionContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestionContainer" type="HSplitContainer" parent="QuestionContainer"]
layout_mode = 2

[node name="QuestionTexture" type="TextureRect" parent="QuestionContainer/QuestionContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="QuestionLabel" type="Label" parent="QuestionContainer/QuestionContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Question"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="QuestionContainer"]
layout_mode = 2

[node name="AnswerButton" type="Button" parent="QuestionContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Show Answer"

[node name="AnswerContainer" type="HSplitContainer" parent="QuestionContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="AnswerLabel" type="Label" parent="QuestionContainer/AnswerContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Answer"
horizontal_alignment = 1

[node name="AnswerTexture" type="TextureRect" parent="QuestionContainer/AnswerContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
